apps/misc/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8080
      targetPort: web-ui
