apps/misc/it-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-ca
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-com
  hostnames:
    - it-tools.travisprosser.ca
    - it-tools.travisprosser.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: it-tools
          port: 8080
